# AmaZ

./: .gitignore  README.md  pyproject.toml  tox.ini
amaz/: ast_utils.py  cli.py  utils.py
amaz/templates/: loader.template  src.template
samples/: clean.py  test.py
tests/: test_cli.py  test_utils.py
